添加版本判断用于转换成系统应用(感谢'迪奥的猫'提供的解决方案)--2001110019

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,8 +6,8 @@ android {
         applicationId "cn.xylin.miui.step.manage"
         minSdkVersion 14
         targetSdkVersion 29
-        versionCode 200119
-        versionName "1.32"
+        versionCode 20011023
+        versionName "1.33"
     }
     buildTypes {
         release {
